# Library-Management-System

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  books.json
docs/: ARCHITECTURAL_OVERVIEW.md  DESIGN_PRINCIPLES_AND_COMPLEXITY.md  DEVELOPER_NOTES.md  FUTURE_ENHANCEMENTS.md  PROJECT_DESCRIPTION.md  UML.md  design-principles-and-complexity.md  future-improvements.md
include/: book.h  cliHandler.h  database.h  library.h  menuHandler.h  storage.h
src/: book.cpp  cliHandler.cpp  database.cpp  library.cpp  main.cpp  menuHandler.cpp  storage.cpp
tests/: CMakeLists.txt  CMakelists.txt  test_library.cpp
